--- a/portfolio_update_v1/styles.css
+++ b/portfolio_update_v1/styles.css
@@ -57,24 +57,24 @@ a:hover {
 
 header {
   text-align: center;
-  background: url('https://placeimg.com/400/400/tech') no-repeat top center ;
+  background: url('images/banner-1200x500.jpg') no-repeat top center ;
   overflow: hidden;
   background-size: cover;
   padding-top: 100px;
-}
-header {
   line-height: 1.5;
 }
+
+
 header .profile-image {
   margin-top: 50px;
   width: 150px;
   height: 150px;
-  border-radius: 50%;
-  border: 3px solid white;
+  border-radius: 25%;
+  border: 3px dotted white;
   transition: all .5s;
 }
 header .profile-image:hover {
-  transform: scale(1.2) rotate(360deg);
+  transform: scale(1.5) rotate(360deg);
 }
 .tag {
   background-color: #efefef;
@@ -100,6 +100,11 @@ header .profile-image:hover {
 }
 .card:hover {
   border-color: #ff99ff;
+}
+
+.mw-image {
+  margin-top:20px;
+  max-width: 100%;
 }
 
 ul.skills {
